[package]
authors = ["L,A.M. <Lepus.Arcticus.Monstrabilis@gmail.com>"]
description = "Detects specific log patterns and takes your favorite actions."
documentation = "https://github.com/LMA-SHIP01-PSO2NGS/ngs-log-action"
edition = "2018"
keywords = ["pso2ngs", "ngss", "log", "action"]
license = "MIT"
name = "ngs-log-action"
repository = "https://github.com/LMA-SHIP01-PSO2NGS/ngs-log-action"
version = "1.2.3"

[dependencies]
anyhow = "1.0.42"
chrono = "0.4.19"
dir = "0.1.2"
encoding_rs = "0.8.28"
encoding_rs_io = "0.1.7"
serde = {version = "1.0.126", features = ["derive"]}
serde_derive = "1.0.126"
strum = "0.21.0"
strum_macros = "0.21.1"
thiserror = "1.0.26"
tokio = {version = "1.8.1", features = ["full"]}
toml = "0.5.8"
lazy_static = "1.4.0"
once_cell = "1.8.0"
regex = "1.5.4"
surf = "2.2.0"
urlencoding = "2.0.0"
termcolor = "1.1.2"
unicode-width = "0.1.8"
# rodio = "0.14.0"
# winaudio = "1.0.2"
